src/components/Cardhover/Cardhover.css
*{
  
  margin:0;
  padding: 0;
}


.container{

  
   
}

body {
  font-family: "Nunito", sans-serif;

}


.cardDisplay{


  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
   flex: 0 1 24%;
   flex-grow: 3;



    

}
.card {


  margin-right: 10px;
  margin-left: 10px;
  margin-top: 18px;
  border-radius: 4px;
  background: #fff;
  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.08), 0 0 6px rgba(0, 0, 0, 0.05);
  transition: 0.3s transform cubic-bezier(0.155, 1.105, 0.295, 1.12),
    0.3s box-shadow,
    0.3s -webkit-transform cubic-bezier(0.155, 1.105, 0.295, 1.12);
  padding: 14px 80px 18px 36px;
  cursor: pointer;
}

.card:hover {
  transform: scale(1.05);
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12), 0 4px 8px rgba(0, 0, 0, 0.06);
}

.card h3 {
  font-weight: 600;
}

.card img {
  position: absolute;
  top: 20px;
  right: 15px;
  max-height: 120px;
}

.card {
  background-image: url(https://ionicframework.com/img/getting-started/ionic-native-card.png);
  background-repeat: no-repeat;
  background-position: right;
  background-size: 80px;
}

@media (max-width: 990px) {
  .card {
    margin: 20px;
  }
  .cardDisplay {
    display: flex;
    flex-direction: column;
}
.card h3 {
    font-weight: 400;
  }
}

